--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xstate/react": "^3.0.1",
+    "daisyui": "^2.33.0",
+    "peerjs": "^1.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.1",
+    "xstate": "^4.33.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
