--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@xstate/react": "^3.0.1",
     "daisyui": "^2.33.0",
+    "nanoid": "^4.0.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
