--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "throttle-debounce": "^5.0.0",
     "tiny-invariant": "^1.3.1",
     "xstate": "^4.33.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/throttle-debounce": "^5.0.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
