--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "throttle-debounce": "^5.0.0",
     "tiny-invariant": "^1.3.1",
-    "xstate": "^4.33.6"
+    "xstate": "^4.33.6",
+    "zustand": "^4.1.3",
+    "zustand-middleware-xstate": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
