--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "throttle-debounce": "^5.0.0",
     "tiny-invariant": "^1.3.1",
     "xstate": "^4.33.6",
-    "zustand": "^4.1.3",
-    "zustand-middleware-xstate": "^1.1.1"
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
