--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tldraw/tldraw": "^2.0.0-alpha.14",
     "@xstate/react": "^3.0.1",
     "daisyui": "^2.33.0",
+    "million": "^2.6.0-beta.7",
     "nanoid": "^4.0.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
